# asarina

./: .gitignore  README.md  makak-usage.md  pyproject.toml  usage.md
asarina/: chip_id.py  config.py  reorganize_archive.py
asarina/calib/: iraf_combine_dark.sh  iraf_combine_flat.sh  make_calib.py  mixdark.py  mixflat.py  smart_dark.py
asarina/observe/: __init__.py  apecalfit.py  bg_predict.py  camera.py  diagnose.py  expcalc.py  nightplot.py  stat.py  train.py  zp_predict.py  zpfit.py
asarina/pipeline/: c0_pipeline.py  c0_pipeline_single.py  get_ecsv.py  ideas.md  image.py  imgproc.py  ingest.py  patch_window.py  pipeline_utils.py  proc_images.py  transient_daemon.py  watch.py
systemd/: c0-pipeline.service
